nginx/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx

spec:
  replicas: 2

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          resources:
              requests:
               cpu: 100m
               memory: 128Mi
              limits:
               cpu: 200m
               memory: 256Mi
          volumeMounts:
            - name: my-volume
              mountPath: /usr/share/nginx/html

      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: local-pvc
